--- a/app/scss/partials/grids.scss
+++ b/app/scss/partials/grids.scss
@@ -10,7 +10,7 @@ body {
   display: grid;
   grid-template-columns: 100px repeat(11, 1fr);
   grid-template-rows: 50px repeat(9, 1fr) 50px;
-  grid-template-areas: "logo topbar topbar topbar topbar topbar topbar topbar topbar topbar topbar topbar" 
+  grid-template-areas: "logo main main main main main main main main main main main" 
   "sidebar main main main main main main main main main main main"  
   "sidebar main main main main main main main main main main main"
     "sidebar main main main main main main main main main main main" 
