--- a/app/css/main.css
+++ b/app/css/main.css
@@ -274,7 +274,7 @@ body {
 .title {
   -webkit-user-select: none;
   background-color: #3CA374;
-  color: #41425c;
+  color: #201e1e;
   text-transform: capitalize;
   font-weight: bold;
   text-align: center;
@@ -467,7 +467,7 @@ input {
 
 .tableinput {
   border: none;
-  color: #fff;
+  color: #201e1e;
   background: transparent;
   text-align: center; }
 
@@ -513,7 +513,7 @@ ul::-webkit-scrollbar {
 /* with topbar top: 195px;*/
 .arrow.asc::after {
   position: absolute;
-  top: 155px;
+  top: 150px;
   padding-right: 0;
   bottom: 15px;
   border-left: 4px solid transparent;
@@ -522,7 +522,7 @@ ul::-webkit-scrollbar {
 
 .arrow.dsc::after {
   position: absolute;
-  top: 145px;
+  top: 150px;
   padding-right: 0;
   border-left: 4px solid transparent;
   border-right: 4px solid transparent;
