--- a/app/scss/partials/index.scss
+++ b/app/scss/partials/index.scss
@@ -80,7 +80,7 @@ body {
 .title {
     @include not-selectable;
     background-color: $modal-button-color-2;
-    color: $base-font-color;
+    color: rgb(32, 30, 30);
     text-transform: capitalize;
     font-weight: bold;
     text-align: center;
@@ -308,7 +308,7 @@ input {
 
 .tableinput {
     border: none;
-    color: #fff;
+    color: rgb(32, 30, 30);;
     background: transparent;
     text-align: center;
 }
@@ -359,7 +359,7 @@ ul::-webkit-scrollbar {
 /* with topbar top: 195px;*/
 .arrow.asc::after {
     position: absolute;
-    top: 155px;
+    top: 150px;
     padding-right: 0;
     bottom: 15px;
     border-left: 4px solid transparent;
@@ -369,7 +369,7 @@ ul::-webkit-scrollbar {
 
 .arrow.dsc::after {
     position: absolute;
-    top: 145px;
+    top: 150px;
     padding-right: 0;    
     border-left: 4px solid transparent;
     border-right: 4px solid transparent;
