--- a/app/scss/partials/index.scss
+++ b/app/scss/partials/index.scss
@@ -337,7 +337,11 @@ ul {
 ul::-webkit-scrollbar {
     display: none;
 }
-  
+
+[v-cloak] {
+    display: none !important;
+}
+
 .arrow {
     float: right;
 }
